--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,19 @@ body,html {
 
 .jumbotron {
   background-color: #333;
+  margin-left: 30px;
+  margin-right: 30px;
   color: #eee;
+  border-radius: 0px;
 }
 
 h1 {
   text-align: center;
   font-size: 40px;
+}
+
+.well {
+  margin-top: -20px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
