--- a/css/styles.css
+++ b/css/styles.css
@@ -25,3 +25,19 @@ h1 {
   margin-left: 30px;
   margin-right: 30px;
 }
+
+.side1 {
+  background-color: #ccc;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+}
+
+.side2 {
+  background-color: bisque;
+  height: auto;
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
