--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@ h1 {
   background-color: #ccc;
   height: auto;
   padding-top: 20px;
+  padding-right: 20px;
   padding-bottom: 10px;
   padding-left: 20px;
 }
@@ -40,4 +41,10 @@ h1 {
   padding-left: 20px;
   padding-top: 20px;
   padding-bottom: 10px;
+}
+
+.social {
+  margin-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
 }
