--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,7 @@ p {
 .side1 {
   background-color: #ccc;
   height: auto;
+  border: 2px solid #333;
   padding-top: 20px;
   padding-right: 20px;
   padding-bottom: 10px;
@@ -116,6 +117,7 @@ span.light-blue {
   padding-left: 20px;
   padding-top: 20px;
   padding-bottom: 140px;
+  border: 2px solid #333;
 }
 
 .side2 h2 {
