--- a/css/styles.css
+++ b/css/styles.css
@@ -81,10 +81,8 @@ p {
   padding-bottom: 10px;
 }
 
-.social {
-  margin-top: 20px;
-  padding-bottom: 20px;
-  text-align: center;
+.col-md-3 {
+  padding-bottom: 10px;
 }
 
 /* Spans */
@@ -116,7 +114,7 @@ span.light-blue {
   height: auto;
   padding-left: 20px;
   padding-top: 20px;
-  padding-bottom: 140px;
+  padding-bottom: 56px;
   border: 2px solid #333;
 }
 
@@ -134,6 +132,35 @@ span.light-blue {
   margin-top: -5px;
   border-color: #333;
   padding-bottom: 10px;
+}
+
+#populateUL {
+  list-style-type: square;
+}
+
+/**** Footer ****/
+.footer {
+  height: auto;
+  color: #eee;
+  margin-top: 5px;
+  padding-top: 13px;
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.col-md-6 {
+  padding-bottom: 10px;
+}
+
+footer {
+  font-size: 20px;
+}
+
+.bg-black {
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  background-color: #333;
 }
 
 
@@ -161,6 +188,13 @@ span.light-blue {
   
   .side2 {
     padding-bottom: 180px;
+  }
+}
+
+@media screen and (max-width: 997px) {
+  
+  .btn-group {
+    padding-top: 20px;
   }
 }
 
